--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,52 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nextui-org/autocomplete": "^2.1.7",
+    "@nextui-org/avatar": "^2.0.33",
+    "@nextui-org/badge": "^2.0.32",
+    "@nextui-org/breadcrumbs": "^2.0.13",
+    "@nextui-org/button": "^2.0.38",
+    "@nextui-org/card": "^2.0.34",
+    "@nextui-org/checkbox": "^2.1.5",
+    "@nextui-org/chip": "^2.0.33",
+    "@nextui-org/date-input": "^2.1.4",
+    "@nextui-org/date-picker": "^2.1.8",
+    "@nextui-org/divider": "^2.0.32",
+    "@nextui-org/dropdown": "^2.1.31",
+    "@nextui-org/image": "^2.0.32",
+    "@nextui-org/input": "^2.2.5",
+    "@nextui-org/link": "^2.0.35",
+    "@nextui-org/listbox": "^2.1.27",
+    "@nextui-org/menu": "^2.0.30",
+    "@nextui-org/modal": "^2.0.41",
+    "@nextui-org/navbar": "^2.0.37",
+    "@nextui-org/pagination": "^2.0.36",
+    "@nextui-org/popover": "^2.1.29",
+    "@nextui-org/progress": "^2.0.34",
+    "@nextui-org/select": "^2.2.7",
+    "@nextui-org/skeleton": "^2.0.32",
+    "@nextui-org/slider": "^2.2.17",
+    "@nextui-org/spinner": "^2.0.34",
+    "@nextui-org/switch": "^2.0.34",
+    "@nextui-org/system": "^2.2.6",
+    "@nextui-org/table": "^2.0.40",
+    "@nextui-org/tabs": "^2.0.37",
+    "@nextui-org/theme": "^2.2.11",
+    "@nextui-org/tooltip": "^2.0.41",
+    "@nextui-org/user": "^2.0.34",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.8.6",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "framer-motion": "^11.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "typescript": "^5.6.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -35,5 +74,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.14"
   }
 }
