--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,12 +43,12 @@
     "@types/node": "^22.8.6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "boxicons": "^2.1.4",
     "framer-motion": "^11.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
-    "typescript": "^5.6.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -76,6 +76,7 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3"
   }
 }
